--- a/css/index.css
+++ b/css/index.css
@@ -160,5 +160,73 @@ body {
 }
 
 @media (min-width: 1200px) {
-    
+
+  .grid-container-item {
+    flex-direction: row;
+    align-items: start;
+    justify-content: center;
+  }
+
+  .info-item-top {
+    align-items: start;
+    text-align: start;
+    width: 60%;
+    margin-left: 10%;
+    padding: 80px 25px 25px 25px;
+  }
+
+  .info-item-top img:nth-child(1) {
+    position: absolute;
+    top: 3%;
+    left: 6%;
+    width: 12%;
+  }
+
+  .info-item-top h1 {
+    font-weight: bold;
+    font-size: 4.5rem;
+  }
+
+  .info-item-top p {
+    font-size: 1.5rem;
+  }
+
+  .btn {
+    padding: 10px 20px;
+  }
+
+  .img-item-top img:nth-child(1) {
+    width: 70%;
+  }
+
+  .img-item-top img:nth-child(2) {
+    width: 40%;
+  }
+
+  .img-item-top img:nth-child(3) {
+    width: 70vh;
+  }
+
+  .lista-item-bot {
+    flex-direction: row;
+    padding: 15px 0px;
+  }
+
+  .lst-item p {
+    font-size: 1rem;
+  }
+
+  .lst-item img {
+    width: 70%;
+  }
+}
+
+@keyframes img {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
