--- a/css/index.css
+++ b/css/index.css
@@ -64,12 +64,20 @@ body {
   width: 80%;
   z-index: 1;
   position: absolute;
+  animation: img 1.5s infinite 3s;
 }
 
 .img-item-top img:nth-child(2) {
   width: 40%;
   position: absolute;
   z-index: 2;
+
+  transition: all 3s;
+}
+
+.img-item-top img:nth-child(2):hover {
+  scale: 1.4;
+  transform: translateX(-100px);
 }
 
 .img-item-top img:nth-child(3) {
@@ -91,6 +99,13 @@ body {
   align-items: center;
   justify-content: space-around;
   gap: 20px;
+
+  transition-duration: 1s;
+  transition-property: scale;
+}
+
+.lst-item:hover {
+  scale: 1.1;
 }
 
 .lst-item h4 {
@@ -160,7 +175,6 @@ body {
 }
 
 @media (min-width: 1200px) {
-
   .grid-container-item {
     flex-direction: row;
     align-items: start;
@@ -222,11 +236,15 @@ body {
 }
 
 @keyframes img {
-    from {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    to {
-        opacity: 1;
-    }
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
